Adicionando novas constantes da aplicação

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,8 @@
 DATABASE_URI="mongodb://localhost:PORT/nomedobanco"
 CLIENT_URL="http://localhost:PORT"
 PORT=8080
+
+AUTH0_DOMAIN=""
+AUTH0_AUDIENCE=""
+CLIENT_ID=""
+CLIENT_SECRET=""
